# dummy-server

./: .gitignore  README.md  flake.nix  pyproject.toml  steps.sh
nix/: codegen.nix
src/dummyserver/: __init__.py  cli.py  logging.py  server.py
tests/: __init__.py  test_server.py
